fix : style gap prayer time

--- a/frontend/src/component/pages/prayer-time/style.css
+++ b/frontend/src/component/pages/prayer-time/style.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     background: transparent;
-    gap: 14px;
+    gap: 1.5vw;
     flex-wrap: wrap;
 
     & .__pad {
